deploy/istio/04/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app2
  namespace: demo
spec:
  host: app2.demo.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
#        http2MaxRequests: 10
#        maxRequestsPerConnection: 5
 #       http2MaxRequests: 1
        maxRequestsPerConnection: 3
        http1MaxPendingRequests: 1
    outlierDetection:
#      consecutiveErrors: 3
#      interval: 10s
#      baseEjectionTime: 10m
#      maxEjectionPercent: 10
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 2m
      maxEjectionPercent: 100
#  subsets:
#    - name: v1
#      labels:
#        version: v1
#    - name: v2
#      labels:
#        version: v2
#    - name: v3
#      labels:
#        version: v3
